# Aperture3

./: .ccls  .cquery  .gitignore  .ignore  CMakeLists.txt  README.md  data.xmf  newlab
src/: CMakeLists.txt  additional_diagnostics.cu  additional_diagnostics.h  commandline_args.cpp  commandline_args.h  config_file.cpp  config_file.h  config_toml.cpp  config_toml.h  constant_defs.h  cu_sim_data.cu  cu_sim_data.h  current_depositer.h  domain_communicator.cpp  domain_communicator.h  exponent.cpp  field_solver.h  field_solver_dev.h  field_solvers.h  main.cpp  main3d.cpp  main_1d.cpp  main_2dffe.cpp  main_2dsph.cpp  main_bak.cpp  main_cu.cpp  particle_pusher.h  pic_sim.cpp  pic_sim.h  ptc_pushers.h  ptc_updater.cu  ptc_updater.h  ptc_updater_dev.cu  ptc_updater_dev.h  ptc_updater_helper.cuh  ptc_updater_logsph.cu  ptc_updater_logsph.h  sim_data.cpp  sim_data.cu  sim_data.h  (+11 more)
src/algorithms/: current_deposit_Esirkepov.cpp  current_deposit_Esirkepov.cu  current_deposit_Esirkepov.h  ffe_solver_logsph.h  field_solver.h  field_solver_1d.cpp  field_solver_1d.h  field_solver_1dgap.h  field_solver_1dgr.h  field_solver_default.cpp  field_solver_default.cu  field_solver_default.h  field_solver_ffe.h  field_solver_ffe_cyl.cu  field_solver_ffe_cyl.h  field_solver_finite_diff.cpp  field_solver_force_free.cu  field_solver_force_free.h  field_solver_helper.cuh  field_solver_integral.cpp  field_solver_integral.h  field_solver_log_sph.cu  field_solver_log_sph.h  field_solver_logsph.h  field_solver_simple.cu  finite_diff.cpp  finite_diff.cu  finite_diff.h  functions.cpp  functions.h  interpolation.h  ptc_pusher_beadonwire.cu  ptc_pusher_beadonwire.h  ptc_pusher_constE.cu  ptc_pusher_constE.h  ptc_pusher_geodesic.cpp  ptc_pusher_geodesic.h  ptc_pusher_mapping.cpp  ptc_updater.h  ptc_updater_1d.cpp  (+8 more)
src/core/: array.cpp  array.h  array_impl.hpp  constant_defs.h  domain_info.h  enum_types.h  field_solver_1d.cpp  field_solver_default.cpp  field_solver_default.h  field_solver_finite_diff.cpp  fields.cpp  fields.h  fields_impl.hpp  functions.cpp  grid.cpp  grid.h  interpolation.h  multi_array.cpp  multi_array.h  multi_array_impl.hpp  particle_base.h  particle_base_impl.hpp  particles.cpp  particles.h  photons.cpp  photons.h  ptc_pusher_geodesic.cpp  ptc_pusher_geodesic.h  ptc_pusher_mapping.cpp  ptc_updater_1d.cpp  ptc_updater_1d.h  ptc_updater_default.cpp  ptc_updater_default.h  quadmesh.h  solve.cpp  typedefs.h  vec3.h  vec4.h
src/core/detail/: map_multi_array.hpp  multi_array_impl.hpp  multi_array_iter_impl.hpp  multi_array_utils.hpp  op.hpp
src/cuda/: constant_mem.cpp  constant_mem.cu  constant_mem.h  constant_mem_func.h  cudaUtility.h  cudarng.h  data_ptrs.h  kernels.cu  kernels.h  memory.h  ptr_util.h  sim_data.cu  sim_environment.cpp
src/cuda/algorithms/: ffe_solver_logsph.cu  field_solver.cu  field_solver_1dgap.cu  field_solver_1dgr.cu  field_solver_ffe.cu  field_solver_logsph.cu  gravity.cuh  ptc_updater.cu  ptc_updater_1dgap.cu  ptc_updater_1dgr.cu  ptc_updater_cart.cu  ptc_updater_helper.cu  ptc_updater_helper.cuh  ptc_updater_logsph.cu  resonant_cooling.cuh  sync_cooling.cuh  user_push_2d.cuh  user_push_2d_cart.cu  user_push_2d_cart.cuh  user_push_2d_logsph.cu  user_push_2d_logsph.cuh  user_push_3d_cart.cu  user_push_3d_cart.cuh  vay_push.cu  vay_push.cuh
src/cuda/core/: additional_diagnostics.cu  additional_diagnostics.h  array.cu  callbacks.h  cu_sim_data.cu  cu_sim_data.h  cu_sim_data1d.cu  cu_sim_data1d.h  cu_sim_data_impl.hpp  cu_sim_environment.cpp  cu_sim_environment.h  current_deposit_Esirkepov.h  (+34 more)
src/data/: array.cu  array.h  callbacks.h  cu_multi_array.cu  cu_multi_array.h  domain_info.h  enum_types.h  field_base.h  fields.cpp  fields.cu  fields.h  fields_dev.cu  fields_dev.h  fields_utils.cu  fields_utils.h  grid.cpp  grid.cu  grid.h  grid_1dGR.cpp  grid_1dGR.h  grid_log_sph.cpp  grid_log_sph.h  grid_log_sph_base.h  grid_log_sph_dev.cpp  grid_log_sph_dev.h  multi_array.cpp  multi_array.cu  multi_array.h  multi_array_dev.cu  multi_array_dev.h  particle_base.h  particle_base_dev.h  particle_data.h  particle_interface.h  particles.cpp  particles.cu  particles.h  particles_1d.cu  particles_1d.h  particles_dev.cu  (+13 more)
src/grids/: grid_1dGR.cpp  grid_1dGR.h  grid_1dgap.cpp  grid_1dgap.h  grid_1dgr.cpp  grid_1dgr.h  grid_log_sph.cpp  grid_log_sph.h  grid_log_sph_base.h
src/radiation/: curvature_instant.cuh  curvature_instant.h  inverse_compton.cu  inverse_compton_black_body.cuh  inverse_compton_black_body.h  inverse_compton_dummy.cuh  inverse_compton_dummy.h  inverse_compton_power_law.cuh  inverse_compton_power_law.h  radiation_field.cu  radiation_field.h  radiation_transfer.cu  radiation_transfer.h  radiative_transfer.h  rt_1d.cpp  rt_1d.h  rt_pulsar.cu  rt_pulsar.h  spectra.h
src/utils/: Logger.cpp  avx_interp.hpp  avx_utils.h  cu_data_exporter.cpp  cu_data_exporter.h  data_exporter.cpp  data_exporter.h  data_exporter_impl.hpp  data_exporter_legacy.cpp  double_buffer.h  exporter.cpp  exporter.h  filesystem.cpp  filesystem.h  for_each_arg.hpp  hdf_exporter.cpp  hdf_exporter.h  hdf_exporter_impl.hpp  hdf_exporter_parallel.cpp  hdf_exporter_parallel.h  hdf_wrapper.cpp  hdf_wrapper.h  hdf_wrapper_impl.hpp  integrator.h  integrator_impl.hpp  interpolation.cuh  interpolation.h  logger.cpp  logger.h  memory.cpp  memory.h  mpi_comm.cpp  mpi_comm.h  mpi_comm_impl.hpp  mpi_helper.cpp  mpi_helper.h  silo_file.cpp  silo_file.h  simd.h  timer.cpp  (+4 more)
tests/: CMakeLists.txt  hdf5.cpp  test_AD.cpp  test_IC.cpp  test_IC_PL.cpp  test_avx.cpp  test_config.cpp  test_cuda.cu  test_domain.cpp  test_env.cpp  test_env.cu  test_f.cpp  test_ffe.cpp  test_ffe2d.cpp  test_field_solver.cpp  test_fields.cpp  test_finite_diff.cpp  test_flags.cpp  test_free_path.cpp  test_hdf5.cpp  test_ic.cu  test_mpi.cpp  test_mpi2d.cpp  test_mpi3d.cpp  test_multi_array.cpp  test_multi_gpu.cu  test_multiarray.cu  test_pair_creation.cpp  test_parse.cpp  test_particles.cpp  test_particles.cu  test_particles_dev.cpp  test_pitchptr.cu  test_ptc_comm.cpp  test_ptc_comm.cu  test_ptc_update.cpp  test_stagger.cpp  test_typed_pitchedptr.cu
(+248 files in other folders)
